
ChangeLog
 [ + added, - removed, * changed ]
 + 14Nov2014 Added 'wrapgen' script to generate lists of wrappers/probes automatically
 * 03Nov2014 Fix capturing >1k function names through binutils
             Added instrumentation for:
               MPI_Win_post, MPI_Win_complete, MPI_Win_wait
	     Fixed bug in the initialization of the on-line gremlins   
 + 31Oct2014 Added instrumentation for:
               MPI_Win_create, MPI_Win_free, MPI_Win_start, MPI_Win_fence
             Fix ordering in ROW file / objects in .prv
 * 30Oct2014 Fixed the DistributeWork routine to support dynamic threads per task.
             Fixed the Search_Synchronization_Point routine to support the different distribution methods (block, cyclic, size...)
             Upgraded to v3.0.3.
 * 16Oct2014 Added configuration options for the gremlins analysis. 
	     Also changed the initialization of the gremlins.
 * 09Oct2014 Added interface for libgomp 4.9. 
	     Added configure parameter '--with-libgomp-version' to choose the interface. 
             For both versions 4.2 and 4.9, the helper struct used to pass the parameters to the tasks has been changed to be allocated dynamically. 
	     Instrumentation for tasks has been disabled in version 4.9 because it crashes inside the OpenMP runtime. 
	     Upgraded to v3.0.2.
 + 04Oct2014 Fix request for bfd_demangle (reported by David Clarke)
 + 25Sep2014 Move .sym file from $temporal_dir to $final_dir
 * 19Sep2014 Fixed minor version from 3.01 to 3.0.1 
 + 08Sep2014 Added support for OpenMP threads in the on-line analysis.
             Upgraded version to 3.01.
 + 05Sep2014 Added instrumentation for mpi_request_get_status/fortran
 * 02Sep2014 Fixed bug in the buffers management. Need to forward to the
 SEEK_END of the file before writing to disk, due to the interactions between
 the normal tracing buffer and the cache.
 * 01Sep2014 Fixed bug in the gremlins initial configuration that crashed
 Extrae when not doing gremlins analysis